WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195377
Web Inspector: DOM Debugger: event breakpoints still fire when breakpoints are disabled
https://bugs.webkit.org/show_bug.cgi?id=195377
Summary
Web Inspector: DOM Debugger: event breakpoints still fire when breakpoints ar...
Devin Rousso
Reported
2019-03-06 14:04:22 PST
# STEPS TO REPRODUCE: 1. open inspector2 2. set an event breakpoint on "click" 3. click on an element in the Elements tab => "scroll" breakpoint hit (expected) 4. disable breakpoints 5. continue => "scroll" breakpoint hit (unexpected)
Attachments
Patch
(7.28 KB, patch)
2019-03-06 15:06 PST
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Patch
(7.33 KB, patch)
2019-03-06 15:17 PST
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-highsierra
(2.46 MB, application/zip)
2019-03-06 16:19 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews125 for ios-simulator-wk2
(2.49 MB, application/zip)
2019-03-06 17:03 PST
,
EWS Watchlist
no flags
Details
Patch
(7.34 KB, patch)
2019-03-06 17:20 PST
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-03-06 14:04:40 PST
<
rdar://problem/48651645
>
Devin Rousso
Comment 2
2019-03-06 15:06:28 PST
Created
attachment 363797
[details]
Patch
Joseph Pecoraro
Comment 3
2019-03-06 15:09:39 PST
Comment on
attachment 363797
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=363797&action=review
r=me, nice!
> LayoutTests/inspector/dom-debugger/event-listener-breakpoints-expected.txt:94 > +PASS: Should only pause once.
Maybe "Should only have paused once."
Matt Baker
Comment 4
2019-03-06 15:10:35 PST
Comment on
attachment 363797
[details]
Patch r=me
Matt Baker
Comment 5
2019-03-06 15:10:54 PST
Oops. r=Joe :)
Devin Rousso
Comment 6
2019-03-06 15:17:39 PST
Created
attachment 363799
[details]
Patch
EWS Watchlist
Comment 7
2019-03-06 16:19:41 PST
Comment hidden (obsolete)
Comment on
attachment 363799
[details]
Patch
Attachment 363799
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/11403723
New failing tests: inspector/dom-debugger/event-listener-breakpoints.html
EWS Watchlist
Comment 8
2019-03-06 16:19:43 PST
Comment hidden (obsolete)
Created
attachment 363810
[details]
Archive of layout-test-results from ews101 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 9
2019-03-06 17:03:09 PST
Comment hidden (obsolete)
Comment on
attachment 363799
[details]
Patch
Attachment 363799
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/11403796
New failing tests: fast/viewport/ios/device-width-viewport-after-changing-view-scale.html
EWS Watchlist
Comment 10
2019-03-06 17:03:11 PST
Comment hidden (obsolete)
Created
attachment 363820
[details]
Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Devin Rousso
Comment 11
2019-03-06 17:20:27 PST
Created
attachment 363823
[details]
Patch Fix test structure/order for WK1.
WebKit Commit Bot
Comment 12
2019-03-06 19:21:25 PST
Comment on
attachment 363823
[details]
Patch Clearing flags on attachment: 363823 Committed
r242588
: <
https://trac.webkit.org/changeset/242588
>
WebKit Commit Bot
Comment 13
2019-03-06 19:21:26 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug