Web Inspector: DOM Debugger: event breakpoints still fire when breakpoints are disabled https://bugs.webkit.org/show_bug.cgi?id=195377 <rdar://problem/48651645>

Reviewed by Joseph Pecoraro and Matt Baker.

Source/WebCore:

Test: inspector/dom-debugger/event-listener-breakpoints.html

* inspector/agents/InspectorDOMDebuggerAgent.cpp:
(WebCore::InspectorDOMDebuggerAgent::willHandleEvent):
(WebCore::InspectorDOMDebuggerAgent::willFireTimer):
(WebCore::InspectorDOMDebuggerAgent::willFireAnimationFrame):

LayoutTests:

* inspector/dom-debugger/event-listener-breakpoints.html:
* inspector/dom-debugger/event-listener-breakpoints-expected.txt:


Canonical link: https://commits.webkit.org/209729@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242588 268f45cc-cd09-0410-ab3c-d52691b4dbfc